--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,19 @@
-- name: SHELL; install appy yaml file
+- name: SHELL; install appy yaml file from http link
   shell:
     cmd:  kubectl apply -f {{ K8S_RESOURCE }}
   when: IS_HTTP|bool
 
-- name: SHELL; install appy yaml file
+- name: SHELL; install appy  string yaml file
   shell:
     executable: /bin/bash
     cmd:  echo -e "{{ K8S_RESOURCE }}" | kubectl apply -f -
-  when: not IS_HTTP|bool
+  when: not IS_HTTP|bool and not IS_BASE64|bool
+
+- name: SHELL; install appy bse64 yaml file
+  shell:
+    executable: /bin/bash
+    cmd:  echo -e "{{ K8S_RESOURCE | b64decode }}" | kubectl apply -f -
+  when: not IS_HTTP|bool and IS_BASE64|bool
 
 - name: Install, configure, and start Apache
   block:
